--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 *.user
 *.userosscache
 *.sln.docstates
-
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -30,7 +29,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
-
+.vscode/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
